--- a/shortlink/app/views/layouts/application.html.erb
+++ b/shortlink/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<%= yield %>
+<%= render 'shared/navbar' %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <%= yield %>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
