--- a/shortlink/app/views/shared/_navbar.html.erb
+++ b/shortlink/app/views/shared/_navbar.html.erb
@@ -12,7 +12,13 @@
         <li><a href="#">Link</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <% if user_signed_in? %>
+          <li><%= link_to 'me@example.com', edit_user_registration_path %></li>
+          <li><%= link_to 'Sign out', destroy_user_session_path, {method: :delete} %></li>
+        <% else %>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <li><%= link_to 'Sign in', new_user_session_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
