--- a/shortlink/app/views/links/index.html.erb
+++ b/shortlink/app/views/links/index.html.erb
@@ -2,16 +2,26 @@
 
 <h1>Listing Links</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Nickname</th>
+      <th>From slug</th>
+      <th>To URL</th>
+      <th>Owner</th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @links.each do |link| %>
       <tr>
+        <td><%= link.nickname %></td>
+        <td><%= link.from_slug %></td>
+        <td><%= link.to_url %></td>
+        <td><%= link.user.email %></td>
         <td><%= link_to 'Show', link %></td>
         <td><%= link_to 'Edit', edit_link_path(link) %></td>
         <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
