--- a/shortlink/app/views/translator/redirect.html.erb
+++ b/shortlink/app/views/translator/redirect.html.erb
@@ -1,5 +1,3 @@
-<p>Params:</p>
-<pre><code><%= params.inspect %></code></pre>
-
-<p>Link:</p>
-<pre><code><%= @link.inspect %></code></pre>
+<script type="text/javascript" charset="utf-8">
+  window.location = "<%= @link.to_url %>"
+</script>
